# omniachain

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  test_integration.py  test_media.py
docs/: index.md
docs/agents/: artist.md  multimodal.md  overview.md  planner.md  react.md  supervisor.md  voice.md
docs/assets/: extra.css
docs/getting-started/: configuration.md  first-agent.md  installation.md
docs/mcp/: client.md  overview.md  server.md
docs/media/: image-gen.md  overview.md  stt.md  tts.md
docs/memory/: overview.md  vector.md
docs/observability/: overview.md
docs/pipeline/: overview.md
docs/providers/: overview.md
docs/security/: pgp.md
docs/tools/: builtin.md  creating-tools.md
examples/: 01_basic.py  02_multimodal.py  03_multi_agent.py  04_mcp_server.py  05_security.py  06_pipeline.py
omniachain/: __init__.py
omniachain/agents/: __init__.py  artist.py  base.py  multimodal.py  planner.py  react.py  supervisor.py  voice.py
omniachain/core/: __init__.py  chain.py  config.py  context.py  errors.py  message.py  response.py
omniachain/loaders/: __init__.py  audio.py  auto.py  base.py  base64.py  code.py  csv.py  image.py  pdf.py  text.py  url.py  video.py
omniachain/mcp/: __init__.py  client.py  decorators.py  registry.py  server.py  transport.py
omniachain/media/: __init__.py  image_gen.py  stt.py  tts.py
omniachain/memory/: __init__.py  buffer.py  mcp_memory.py  persistent.py  summary.py  vector.py
omniachain/observability/: __init__.py  costs.py  dashboard.py  logger.py  tracer.py
omniachain/orchestration/: __init__.py  coordinator.py  cost_optimizer.py  fallback.py  pool.py  router.py  session.py
omniachain/pipeline/: __init__.py  conditional.py  parallel.py  router.py  sequential.py
tests/: __init__.py  conftest.py  test_audio_agent.py  test_core.py  test_media.py  test_memory.py  test_security.py  test_tools.py
(+23 files in other folders)
