[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniachain"
version = "0.1.0"
description = "Intelligent async-first, multi-modal Python framework for AI agent orchestration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "OmniaChain Team" },
]
keywords = ["ai", "llm", "agents", "async", "multimodal", "mcp", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "anthropic>=0.30",
    "openai>=1.40",
    "groq>=0.9",
    "google-generativeai>=0.7",
    "mcp>=1.0",
    "pypdf>=4.0",
    "pillow>=10.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "yt-dlp>=2024.0",
    "aiofiles>=24.0",
    "rich>=13.0",
    "typer>=0.12",
    "python-gnupg>=0.5",
    "asyncpg>=0.29",
    "pgvector>=0.3",
]

[project.optional-dependencies]
vector = ["chromadb>=0.5", "sentence-transformers>=3.0"]
browser = ["playwright>=1.45"]
audio = ["openai-whisper>=20231117"]
all = ["omniachain[vector,browser,audio]"]

[project.urls]
Homepage = "https://github.com/RamonBritoDev/omniachain"
Documentation = "https://github.com/RamonBritoDev/omniachain.wiki.git"
Repository = "https://github.com/RamonBritoDev/omniachain"

[tool.hatch.build.targets.wheel]
packages = ["omniachain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
